# openapi.json
@@ -1750,76 +1750,6 @@
         "required": ["name", "allocation"],
         "title": "CampaignsIn"
       },
-      "GeometryCollection": {
-        "properties": {
-          "bbox": {
-            "anyOf": [
-              {
-                "prefixItems": [
-                  { "type": "number" },
-                  { "type": "number" },
-                  { "type": "number" },
-                  { "type": "number" }
-                ],
-                "type": "array",
-                "maxItems": 4,
-                "minItems": 4
-              },
-              {
-                "prefixItems": [
-                  { "type": "number" },
-                  { "type": "number" },
-                  { "type": "number" },
-                  { "type": "number" },
-                  { "type": "number" },
-                  { "type": "number" }
-                ],
-                "type": "array",
-                "maxItems": 6,
-                "minItems": 6
-              },
-              { "type": "null" }
-            ],
-            "title": "Bbox"
-          },
-          "type": {
-            "type": "string",
-            "const": "GeometryCollection",
-            "title": "Type"
-          },
-          "geometries": {
-            "items": {
-              "oneOf": [
-                { "$ref": "#/components/schemas/Point" },
-                { "$ref": "#/components/schemas/MultiPoint" },
-                { "$ref": "#/components/schemas/LineString" },
-                { "$ref": "#/components/schemas/MultiLineString" },
-                { "$ref": "#/components/schemas/Polygon" },
-                { "$ref": "#/components/schemas/MultiPolygon" },
-                { "$ref": "#/components/schemas/GeometryCollection" }
-              ],
-              "discriminator": {
-                "propertyName": "type",
-                "mapping": {
-                  "GeometryCollection": "#/components/schemas/GeometryCollection",
-                  "LineString": "#/components/schemas/LineString",
-                  "MultiLineString": "#/components/schemas/MultiLineString",
-                  "MultiPoint": "#/components/schemas/MultiPoint",
-                  "MultiPolygon": "#/components/schemas/MultiPolygon",
-                  "Point": "#/components/schemas/Point",
-                  "Polygon": "#/components/schemas/Polygon"
-                }
-              }
-            },
-            "type": "array",
-            "title": "Geometries"
-          }
-        },
-        "type": "object",
-        "required": ["type", "geometries"],
-        "title": "GeometryCollection",
-        "description": "GeometryCollection Model"
-      },
       "GetCampaignResponse": {
         "properties": {
           "id": { "type": "integer", "title": "Id" },
@@ -1971,56 +1901,6 @@
         "type": "object",
         "title": "HTTPValidationError"
       },
-      "LineString": {
-        "properties": {
-          "bbox": {
-            "anyOf": [
-              {
-                "prefixItems": [
-                  { "type": "number" },
-                  { "type": "number" },
-                  { "type": "number" },
-                  { "type": "number" }
-                ],
-                "type": "array",
-                "maxItems": 4,
-                "minItems": 4
-              },
-              {
-                "prefixItems": [
-                  { "type": "number" },
-                  { "type": "number" },
-                  { "type": "number" },
-                  { "type": "number" },
-                  { "type": "number" },
-                  { "type": "number" }
-                ],
-                "type": "array",
-                "maxItems": 6,
-                "minItems": 6
-              },
-              { "type": "null" }
-            ],
-            "title": "Bbox"
-          },
-          "type": { "type": "string", "const": "LineString", "title": "Type" },
-          "coordinates": {
-            "items": {
-              "anyOf": [
-                { "$ref": "#/components/schemas/Position2D" },
-                { "$ref": "#/components/schemas/Position3D" }
-              ]
-            },
-            "type": "array",
-            "minItems": 2,
-            "title": "Coordinates"
-          }
-        },
-        "type": "object",
-        "required": ["type", "coordinates"],
-        "title": "LineString",
-        "description": "LineString Model"
-      },
       "ListCampaignsResponseItem": {
         "properties": {
           "id": { "type": "integer", "title": "Id" },
@@ -2062,35 +1942,7 @@
             "title": "Allocation"
           },
           "summary": { "$ref": "#/components/schemas/SummaryListCampaigns" },
-          "geometry": {
-            "anyOf": [
-              {
-                "oneOf": [
-                  { "$ref": "#/components/schemas/Point" },
-                  { "$ref": "#/components/schemas/MultiPoint" },
-                  { "$ref": "#/components/schemas/LineString" },
-                  { "$ref": "#/components/schemas/MultiLineString" },
-                  { "$ref": "#/components/schemas/Polygon" },
-                  { "$ref": "#/components/schemas/MultiPolygon" },
-                  { "$ref": "#/components/schemas/GeometryCollection" }
-                ],
-                "discriminator": {
-                  "propertyName": "type",
-                  "mapping": {
-                    "GeometryCollection": "#/components/schemas/GeometryCollection",
-                    "LineString": "#/components/schemas/LineString",
-                    "MultiLineString": "#/components/schemas/MultiLineString",
-                    "MultiPoint": "#/components/schemas/MultiPoint",
-                    "MultiPolygon": "#/components/schemas/MultiPolygon",
-                    "Point": "#/components/schemas/Point",
-                    "Polygon": "#/components/schemas/Polygon"
-                  }
-                }
-              },
-              { "type": "null" }
-            ],
-            "title": "Geometry"
-          }
+          "geometry": { "anyOf": [{}, { "type": "null" }], "title": "Geometry" }
         },
         "type": "object",
         "required": ["id", "name", "summary"],
@@ -2322,172 +2174,6 @@
         "type": "object",
         "title": "MeasurementUpdate"
       },
-      "MultiLineString": {
-        "properties": {
-          "bbox": {
-            "anyOf": [
-              {
-                "prefixItems": [
-                  { "type": "number" },
-                  { "type": "number" },
-                  { "type": "number" },
-                  { "type": "number" }
-                ],
-                "type": "array",
-                "maxItems": 4,
-                "minItems": 4
-              },
-              {
-                "prefixItems": [
-                  { "type": "number" },
-                  { "type": "number" },
-                  { "type": "number" },
-                  { "type": "number" },
-                  { "type": "number" },
-                  { "type": "number" }
-                ],
-                "type": "array",
-                "maxItems": 6,
-                "minItems": 6
-              },
-              { "type": "null" }
-            ],
-            "title": "Bbox"
-          },
-          "type": {
-            "type": "string",
-            "const": "MultiLineString",
-            "title": "Type"
-          },
-          "coordinates": {
-            "items": {
-              "items": {
-                "anyOf": [
-                  { "$ref": "#/components/schemas/Position2D" },
-                  { "$ref": "#/components/schemas/Position3D" }
-                ]
-              },
-              "type": "array",
-              "minItems": 2
-            },
-            "type": "array",
-            "title": "Coordinates"
-          }
-        },
-        "type": "object",
-        "required": ["type", "coordinates"],
-        "title": "MultiLineString",
-        "description": "MultiLineString Model"
-      },
-      "MultiPoint": {
-        "properties": {
-          "bbox": {
-            "anyOf": [
-              {
-                "prefixItems": [
-                  { "type": "number" },
-                  { "type": "number" },
-                  { "type": "number" },
-                  { "type": "number" }
-                ],
-                "type": "array",
-                "maxItems": 4,
-                "minItems": 4
-              },
-              {
-                "prefixItems": [
-                  { "type": "number" },
-                  { "type": "number" },
-                  { "type": "number" },
-                  { "type": "number" },
-                  { "type": "number" },
-                  { "type": "number" }
-                ],
-                "type": "array",
-                "maxItems": 6,
-                "minItems": 6
-              },
-              { "type": "null" }
-            ],
-            "title": "Bbox"
-          },
-          "type": { "type": "string", "const": "MultiPoint", "title": "Type" },
-          "coordinates": {
-            "items": {
-              "anyOf": [
-                { "$ref": "#/components/schemas/Position2D" },
-                { "$ref": "#/components/schemas/Position3D" }
-              ]
-            },
-            "type": "array",
-            "title": "Coordinates"
-          }
-        },
-        "type": "object",
-        "required": ["type", "coordinates"],
-        "title": "MultiPoint",
-        "description": "MultiPoint Model"
-      },
-      "MultiPolygon": {
-        "properties": {
-          "bbox": {
-            "anyOf": [
-              {
-                "prefixItems": [
-                  { "type": "number" },
-                  { "type": "number" },
-                  { "type": "number" },
-                  { "type": "number" }
-                ],
-                "type": "array",
-                "maxItems": 4,
-                "minItems": 4
-              },
-              {
-                "prefixItems": [
-                  { "type": "number" },
-                  { "type": "number" },
-                  { "type": "number" },
-                  { "type": "number" },
-                  { "type": "number" },
-                  { "type": "number" }
-                ],
-                "type": "array",
-                "maxItems": 6,
-                "minItems": 6
-              },
-              { "type": "null" }
-            ],
-            "title": "Bbox"
-          },
-          "type": {
-            "type": "string",
-            "const": "MultiPolygon",
-            "title": "Type"
-          },
-          "coordinates": {
-            "items": {
-              "items": {
-                "items": {
-                  "anyOf": [
-                    { "$ref": "#/components/schemas/Position2D" },
-                    { "$ref": "#/components/schemas/Position3D" }
-                  ]
-                },
-                "type": "array",
-                "minItems": 4
-              },
-              "type": "array"
-            },
-            "type": "array",
-            "title": "Coordinates"
-          }
-        },
-        "type": "object",
-        "required": ["type", "coordinates"],
-        "title": "MultiPolygon",
-        "description": "MultiPolygon Model"
-      },
       "Point": {
         "properties": {
           "bbox": {
@@ -2533,59 +2219,6 @@
         "required": ["type", "coordinates"],
         "title": "Point",
         "description": "Point Model"
-      },
-      "Polygon": {
-        "properties": {
-          "bbox": {
-            "anyOf": [
-              {
-                "prefixItems": [
-                  { "type": "number" },
-                  { "type": "number" },
-                  { "type": "number" },
-                  { "type": "number" }
-                ],
-                "type": "array",
-                "maxItems": 4,
-                "minItems": 4
-              },
-              {
-                "prefixItems": [
-                  { "type": "number" },
-                  { "type": "number" },
-                  { "type": "number" },
-                  { "type": "number" },
-                  { "type": "number" },
-                  { "type": "number" }
-                ],
-                "type": "array",
-                "maxItems": 6,
-                "minItems": 6
-              },
-              { "type": "null" }
-            ],
-            "title": "Bbox"
-          },
-          "type": { "type": "string", "const": "Polygon", "title": "Type" },
-          "coordinates": {
-            "items": {
-              "items": {
-                "anyOf": [
-                  { "$ref": "#/components/schemas/Position2D" },
-                  { "$ref": "#/components/schemas/Position3D" }
-                ]
-              },
-              "type": "array",
-              "minItems": 4
-            },
-            "type": "array",
-            "title": "Coordinates"
-          }
-        },
-        "type": "object",
-        "required": ["type", "coordinates"],
-        "title": "Polygon",
-        "description": "Polygon Model"
       },
       "Position2D": {
         "prefixItems": [
